Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-97241

Qt no longer compiles when configured with -trace

XMLWordPrintable

    • Windows

      FAILED: qtbase/src/corelib/CMakeFiles/Core.dir/kernel/qobject.cpp.o 
      /usr/lib/ccache/bin/c++ -DCore_EXPORTS -DELF_INTERPRETER=\"/lib64/ld-linux-x86-64.so.2\" -DQT_ASCII_CAST_WARNINGS -DQT_BUILDING_QT -DQT_BUILD_CORE_LIB -DQT_DEPRECATED_WARNINGS -DQT_DEPRECATED_WARNINGS_SINCE=0x060000 -DQT_DISABLE_DEPRECATED_BEFORE=0x050000 -DQT_MOC_COMPAT -DQT_NO_CAST_TO_ASCII -DQT_NO_DEBUG -DQT_NO_FOREACH -DQT_NO_USING_NAMESPACE -DQT_TYPESAFE_FLAGS -DQT_USE_QSTRINGBUILDER -DQ_TRACEPOINT -D_LARGEFILE64_SOURCE -D_LARGEFILE_SOURCE -I/home/rutledge/dev/qt6-rel/qtbase/src/corelib/Core_autogen/include -I/home/rutledge/dev/qt6-rel/qtbase/include -I/home/rutledge/dev/qt6-rel/qtbase/include/QtCore -I/home/rutledge/dev/qt6/qtbase/src/corelib -I/home/rutledge/dev/qt6-rel/qtbase/src/corelib -I/home/rutledge/dev/qt6-rel/qtbase/src/corelib/global -I/home/rutledge/dev/qt6-rel/qtbase/src/corelib/kernel -I/home/rutledge/dev/qt6/qtbase/src/corelib/../3rdparty/tinycbor/src -I/home/rutledge/dev/qt6-rel/qtbase/include/QtCore/6.3.0 -I/home/rutledge/dev/qt6-rel/qtbase/include/QtCore/6.3.0/QtCore -I/home/rutledge/dev/qt6/qtbase/src/corelib/../3rdparty/forkfd -I/home/rutledge/dev/qt6-rel/qtbase/src/corelib/.rcc -I/home/rutledge/dev/qt6-rel/qtbase/mkspecs/linux-g++ -isystem /usr/include/glib-2.0 -isystem /usr/lib/glib-2.0/include -DNDEBUG -O3 -fPIC -fvisibility=hidden -fvisibility-inlines-hidden -Wall -Wextra -pthread -Werror -Wno-error=cpp -Wno-error=deprecated-declarations -Wno-error=strict-overflow -Wno-error=implicit-fallthrough -Wno-error=deprecated-copy -Wno-error=redundant-move -Wno-error=init-list-lifetime -Wno-error=format-overflow -Wno-error=stringop-overflow -Wno-error=deprecated-enum-enum-conversion -Wno-error=deprecated-enum-float-conversion -no-integrated-cpp -Wno-implicit-fallthrough -Wsuggest-override -std=c++17 -Winvalid-pch -include /home/rutledge/dev/qt6-rel/qtbase/src/corelib/CMakeFiles/Core.dir/cmake_pch.hxx -MD -MT qtbase/src/corelib/CMakeFiles/Core.dir/kernel/qobject.cpp.o -MF qtbase/src/corelib/CMakeFiles/Core.dir/kernel/qobject.cpp.o.d -o qtbase/src/corelib/CMakeFiles/Core.dir/kernel/qobject.cpp.o -c /home/rutledge/dev/qt6/qtbase/src/corelib/kernel/qobject.cpp
      /home/rutledge/dev/qt6/qtbase/src/corelib/kernel/qobject.cpp: In function ‘void doActivate(QObject*, int, void**)’:
      /home/rutledge/dev/qt6/qtbase/src/corelib/kernel/qobject.cpp:3909:82: error: ‘struct SlotObjectGuard’ has no member named ‘get’
       3909 |                     Q_TRACE_SCOPE(QMetaObject_activate_slot_functor, obj.get());
            |                                                                                  ^  
      

      That's from https://codereview.qt-project.org/c/qt/qtbase/+/353731 so probably has been this way since 6.0.

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

            ivan.solovev Ivan Solovev
            srutledg Shawn Rutledge
            Votes:
            0 Vote for this issue
            Watchers:
            4 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes