Fix compilation with -trace

Fixes: QTBUG-97241
Change-Id: I877c6f0792ad2281ccfc73b7549dad7d6bd68995
Reviewed-by: Shawn Rutledge <shawn.rutledge@qt.io>
Reviewed-by: Ievgenii Meshcheriakov <ievgenii.meshcheriakov@qt.io>
Reviewed-by: Mårten Nordheim <marten.nordheim@qt.io>
(cherry picked from commit d9f6fba3854f778124e6f8b1bda0994b42cd7988)
Reviewed-by: Qt Cherry-pick Bot <cherrypick_bot@qt-project.org>